--- a/platformio.ini
+++ b/platformio.ini
@@ -14,6 +14,8 @@ board = esp32doit-devkit-v1
 framework = arduino
 monitor_speed = 115200
 lib_deps = 
-	greiman/SSD1306Ascii@^1.3.1
+	adafruit/Adafruit SSD1306@^2.4.5
+	adafruit/Adafruit BusIO@^1.7.3
+	adafruit/Adafruit GFX Library@^1.10.7
 	fastled/FastLED@^3.4.0
 	sandeepmistry/CAN@^0.3.1
