add ota updater

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,3 +19,7 @@ lib_deps =
 	adafruit/Adafruit GFX Library@^1.10.7
 	fastled/FastLED@^3.4.0
 	sandeepmistry/CAN@^0.3.1
+
+; Uncomment these to use OTA updater
+; upload_protocol = espota
+; upload_port = my-vesc.local
